# r_u_done_yet_syncthing

./: .gitignore  Pipfile  README.md  pyproject.toml  r_u_done_yet_syncthing.py  setup.py  test_r_u_done_yet_syncthing.py
